Added table for driver list and form for driver consent

--- a/track-driver.html
+++ b/track-driver.html
@@ -48,9 +48,56 @@
                             </div>
                             <div class="col-12 col-lg-12">
                                 <div class="card">
+                                    <div class="card-header">
+                                        <div class="tx-semibold">Track Driver List</div>
+                                    </div>
                                     <div class="card-body">
-                                        <div class="tx-normal">
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet ab animi ea impedit quisquam facere quae perferendis voluptatum? Vitae enim nobis natus quo reiciendis ullam error blanditiis delectus id ut
+                                        <div class="table-responsive">
+                                            <table class="table table-sm table-hover table-bordered table-striped mb-0">
+                                                <thead class="thead-success">
+                                                    <tr>
+                                                      <th scope="col">Sr. No</th>
+                                                      <th scope="col">Driver Name</th>
+                                                      <th scope="col">Driver Number</th>
+                                                      <th scope="col">Consent Initiated</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr>
+                                                      <th>1</th>
+                                                      <td>John Doe</td>
+                                                      <td>9876543210</td>
+                                                      <td>
+                                                        <div class="tx-normal">Yes( <a href="tracking-data.html"><i class="fa fa-map-marker text-danger"></i></a>  ) </div>
+                                                      </td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th>2</th>
+                                                      <td>James Smith</td>
+                                                      <td>9328765410</td>
+                                                      <td>
+                                                        <div class="tx-normal">Yes( <a href="tracking-data.html"><i class="fa fa-map-marker text-danger"></i></a>  ) </div>
+                                                      </td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                        <div class="d-flex justify-content-end align-item-center my-2 mt-lg-4">
+                                            <nav aria-label="Track Driver Pagination">
+                                                <ul class="pagination mb-0">
+                                                  <li class="page-item disabled">
+                                                    <a class="page-link">Previous</a>
+                                                  </li>
+                                                  <li class="page-item"><a class="page-link" href="#">1</a></li>
+                                                  <li class="page-item active" aria-current="page">
+                                                    <a class="page-link" href="#">2</a>
+                                                  </li>
+                                                  <li class="page-item"><a class="page-link" href="#">3</a></li>
+                                                  <li class="page-item">
+                                                    <a class="page-link" href="#">Next</a>
+                                                  </li>
+                                                </ul>
+                                            </nav>
                                         </div>
                                     </div>
                                 </div>
